--- a/src/themes/purplehaze/theme.css
+++ b/src/themes/purplehaze/theme.css
@@ -229,11 +229,6 @@ a[data-role=button] {
     border-radius: 0.8em;
 }
 
-.visualCardBox .cardOverlayContainer {
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
 .defaultCardBackground1 {
     background-color: #9c20ab;
 }
